--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,14 @@ dependencies:
   args: ^2.2.0
   equatable: ^2.0.3
   archive: ^3.1.2
+  intl: ^0.17.0
 
 dev_dependencies:
   build_runner: ^2.0.0
   pedantic: ^1.10.0
   retrofit_generator: ^2.0.1
   json_serializable: ^5.0.0
+  intl_translation:
+    git:
+      ref: master
+      url: https://github.com/DRSchlaubi/intl_translation.git
