--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: mcserve
+name: mcserv
 description: CLI util to generate and download mc server files.
 version: 1.0.0
-homepage: https://mcserv.schlaubi.dev
+homepage: https://mcserv.how
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
