--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   equatable: ^2.0.3
   archive: ^3.1.2
   intl: ^0.17.0
+  pub_semver: ^2.0.0
 
 dev_dependencies:
   build_runner: ^2.0.0
