Add first CI - Use Gradle to build msi

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -2,4 +2,10 @@
 # details and rationale, see
 # https://github.com/dart-lang/pedantic#enabled-lints.
 
-include: package:pedantic/analysis_options.yaml
+include: package:lints/recommended.yaml
+
+analyzer:
+  exclude:
+    - lib/intl/**
+    - !lib/intl/localizaions.dart
+
