--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.0.0
-  pedantic: ^1.10.0
+  lints: ^1.0.1
   retrofit_generator: ^2.0.1
   json_serializable: ^5.0.0
   intl_translation:
