--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,6 +10,7 @@ jobs:
   validation:
     name: "Gradle Wrapper Validation"
     runs-on: ubuntu-20.04
+    if: "!contains(github.event.commits[0].message, '[skip ci]')"
     steps:
       - uses: actions/checkout@v2
       - uses: gradle/wrapper-validation-action@v1
@@ -64,6 +65,8 @@ jobs:
     name: "Build Windows installers"
     runs-on: windows-2019
     needs: build_metadata
+    env:
+      VERSION: ${{ needs.build_metadata.outputs.version }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -192,17 +195,21 @@ jobs:
           VERSION: ${{ needs.build_metadata.outputs.version }}
         run: |
           mkdir release_files &&
-          mv linux/mcserv-$VERSION.zip release_files/$VERSION-linux.zip &&
-          mv linux/mcserv-$VERSION.zip.sha256 release_files/$VERSION-linux.zip.sha256 &&
-          mv macos/mcserv-$VERSION.zip release_files/$VERSION-macos.zip &&
-          mv macos/mcserv-$VERSION.zip.sha256 release_files/$VERSION-macos.zip.sha256 &&
-          mv msi/mcserv.msi release_files/$VERSION.msi &&
-          mv msi/mcserv.msi.sha256 msi/$VERSION.msi.sha256
+          mv linux/mcserv-$VERSION.zip release_files/mcserv-$VERSION-linux.zip &&
+          mv linux/mcserv-$VERSION.zip.sha256 release_files/mcserv-$VERSION-linux.zip.sha256 &&
+          mv macos/mcserv-$VERSION.zip release_files/mcserv-$VERSION-macos.zip &&
+          mv macos/mcserv-$VERSION.zip.sha256 release_files/mcserv-$VERSION-macos.zip.sha256 &&
+          mv linux/mcserv-$VERSION.tar.gz release_files/mcserv-$VERSION-linux.tar.gz &&
+          mv linux/mcserv-$VERSION.tar.gz.sha256 release_files/mcserv-$VERSION-linux.tar.gz.sha256 &&
+          mv macos/mcserv-$VERSION.tar.gz release_files/mcserv-$VERSION-macos.tar.gz &&
+          mv macos/mcserv-$VERSION.tar.gz.sha256 release_files/mcserv-$VERSION-macos.tar.gz.sha256 &&
+          mv msi/mcserv.msi release_files/mcserv-$VERSION.msi &&
+          mv msi/mcserv.msi.sha256 msi/mcserv-$VERSION.msi.sha256
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          body: ${{ needs.build.outputs.changelog }}
+          body: ${{ needs.build_metadata.outputs.changelog }}
           draft: true
-          tag_name: v${{ needs.build.outputs.version }}
-          release_name: v${{ needs.build.outputs.version }}
+          tag_name: v${{ needs.build_metadata.outputs.version }}
+          release_name: v${{ needs.build_metadata.outputs.version }}
           files: release_files/*
