--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,14 +9,18 @@ homepage: https://mcserv.how
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
+publish_to: none
+
 dependencies:
-  interact: ^2.0.1
+  interact:
+    git:
+      ref: patch-1
+      url: https://github.com/DRSchlaubi/interact
   meta: ^1.7.0
   file: ^6.1.2
   logging: ^1.0.1
   retrofit: ^2.0.1
   json_annotation: ^4.1.0
-  console: ^4.1.0
   crypto: ^3.0.1
   http: ^0.13.3
   ffi: ^1.1.2
