--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   archive: ^3.1.2
   intl: ^0.17.0
   pub_semver: ^2.0.0
+  filesize: ^2.0.1
 
 dev_dependencies:
   build_runner: ^2.0.0
