--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,7 +1,7 @@
 name: Release
 on:
   release:
-    types: [ prereleased, released ]
+    types: [ prereleased, released, edited ]
 
 jobs:
   chocolatey:
@@ -37,14 +37,14 @@ jobs:
       - name: Bump Winget manifest
         shell: pwsh
         env:
-          GITHUB_TOKEN: ${{ secrets.UPLOAD_GITHUB_TOKEN }}
+          WINGET_GITHUB_TOKEN: ${{ secrets.WINGET_UPLOAD_GITHUB_TOKEN }}
         run: |
           $tagname = $env:GITHUB_REF.Replace("refs/tags/", "")
           $version = $tagname.Replace("v", "")
           $url = "https://github.com/DRSchlaubi/mcserv/releases/download/${tagname}/mcserv-${version}.msi"
           .\wingetcreate.exe update McServ.McServ --url $url --version $version
           if ($version -notmatch "-") {
-            .\wingetcreate.exe submit .\manifests\m\McServ\McServ\${version}\ --token $env:GITHUB_TOKEN
+            .\wingetcreate.exe submit .\manifests\m\McServ\McServ\${version}\ --token $env:WINGET_GITHUB_TOKEN
           }
     # Patch changelog, commit and push to the current repository
   changelog:
@@ -90,12 +90,6 @@ jobs:
         with:
           repository: mcservcli/docs
           token: ${{ secrets.UPLOAD_GITHUB_TOKEN }}
-      - name: Read version
-        id: read_version
-        env:
-          V1: ${{ github.event.release.tag_name }}
-        run: |
-          - echo "::set-output name=VERSION::$(echo $V1 | cut -b 2-)"
       - name: Update mcserv version in docs
         uses: mikefarah/yq@master
         env:
