--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   intl: ^0.17.0
   pub_semver: ^2.0.0
   filesize: ^2.0.1
+  completion: ^1.0.0
 
 dev_dependencies:
   build_runner: ^2.0.0
