--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,6 +2,7 @@ version: 2
 updates:
   - package-ecosystem: github-actions
     directory: /
+    target-branch: develop
     schedule:
       interval: daily
     reviewers:
@@ -9,12 +10,14 @@ updates:
       - nycodeghg
   - package-ecosystem: gitsubmodule
     directory: /packages/arch/mcserv
+    target-branch: develop
     schedule:
       interval: daily
     reviewers:
       - nycodeghg
   - package-ecosystem: gitsubmodule
     directory: /packages/arch/mcserv-git
+    target-branch: develop
     schedule:
       interval: daily
     reviewers:
