--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   meta: ^1.7.0
   file: ^6.1.2
   logging: ^1.0.1
-  retrofit: ^2.0.1
+  retrofit: ^3.0.0
   json_annotation: ^4.1.0
   crypto: ^3.0.1
   http: ^0.13.3
@@ -33,8 +33,8 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.0.0
   lints: ^1.0.1
-  retrofit_generator: ^2.0.1
-  json_serializable: ^5.0.0
+  retrofit_generator: ^3.0.0+2
+  json_serializable: ^6.1.1
   intl_translation:
     git:
       ref: master
