--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -105,6 +105,7 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
+          git stage mkdocs.yml
           git commit -m "Update version"
       - name: Push changes
         uses: ad-m/github-push-action@master
