--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,11 +18,13 @@ jobs:
     name: "Check Dart Code"
     runs-on: ubuntu-20.04
     needs: validation
-    container:
-      image: google/dart:latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Install Dart
+        uses: dart-lang/setup-dart@v1.3
+        with:
+          sdk: 2.16.0        
       - name: Install dependencies
         run: dart pub get
       - name: Analyze Dart
@@ -71,7 +73,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Install Dart
-        uses: dart-lang/setup-dart@7e4ec4f1811e09ce8f339b4d3044220ca799e6c6
+        uses: dart-lang/setup-dart@v1.3
+        with:
+          sdk: 2.16.0
       - uses: actions/setup-java@v3.1.1
         with:
           java-version: 11
@@ -111,7 +115,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Install Dart
-        uses: dart-lang/setup-dart@v1
+        uses: dart-lang/setup-dart@v1.3
+        with:
+          sdk: 2.16.0
       - uses: gradle/gradle-build-action@v2
         name: Build Distribution
         env:
@@ -136,7 +142,9 @@ jobs:
           distribution: adopt
           java-version: 11
       - name: Install Dart
-        uses: dart-lang/setup-dart@v1
+        uses: dart-lang/setup-dart@v1.3
+        with:
+          sdk: 2.16.0
       - uses: gradle/gradle-build-action@v2
         name: Build Distribution
         env:
