--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,7 +43,7 @@ jobs:
       - name: Setup Java
         uses: actions/setup-java@v3.1.1
         with:
-          distribution: adopt
+          distribution: temurin
           java-version: 11
       - name: Fetch Sources
         uses: actions/checkout@v2.3.4
@@ -78,6 +78,7 @@ jobs:
           sdk: 2.16.0
       - uses: actions/setup-java@v3.1.1
         with:
+          distribution: temurin
           java-version: 11
       - name: Download Wix
         run: curl -fsSL https://github.com/wixtoolset/wix3/releases/download/wix3112rtm/wix311.exe -o wix.exe
@@ -139,7 +140,7 @@ jobs:
       - name: Setup Java
         uses: actions/setup-java@v3.1.1
         with:
-          distribution: adopt
+          distribution: temurin
           java-version: 11
       - name: Install Dart
         uses: dart-lang/setup-dart@v1.3
